# vectorize-me

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  settings.yaml
.github/workflows/: publish.yml
src/vectorizer/: settings.py
src/vectorizer/cli/: ingest.py
src/vectorizer/extractors/: __init__.py  docx.py  md.py  pdf.py
src/vectorizer/ingest/: __init__.py  chunking.py  runner.py
